improved model inference save final model in RL